# edgepredict-engine-v3

./: CMakeLists.txt  Dockerfile  complete code structure.txt  input.json  input_turning.json  sandvik_de10.gcode  test_crash.json  turning_test.gcode
Tools geo/: sandvik_ccet.stp  sandvik_de10.stp  tool2.STEP
include/: AMRManager.cuh  AdiabaticShearModel.cuh  AsyncExporter.h  Base64.h  BoringStrategy.h  CFDSolver.h  CFDSolverGPU.cuh  Config.h  ContactSolver.cuh  CoordinateSystem.h  CudaUtils.cuh  DrillingStrategy.h  EnergyMonitor.h  FEMSolver.cuh  GCodeInterpreter.h  GeometricAnalyzer.h  GeometryLoader.h  HDF5Exporter.h  IMachiningStrategy.h  IPhysicsSolver.h  IPhysicsStrategy.h  ImplicitFEMSolver.cuh  MaterialModels.h  MillingStrategy.h  MultiGPUManager.cuh  OptimizationManager.h  PhysicsData.h  ReamingStrategy.h  ResidualStressAnalyzer.h  RotationalFEA.h  SPHSolver.cuh  SPHWorkpieceModel.h  SimulationEngine.h  SpatialHash.h  StdoutIPCExporter.h  SurfaceReconstructor.h  SurfaceRoughnessPredictor.h  ThreadingStrategy.h  ToolCoatingModel.cuh  ToolGenerator.h  (+7 more)
src/: AMRManager.cu  AdiabaticShearModel.cu  BoringStrategy.cpp  CFDSolver.cpp  CFDSolverGPU.cu  Config.cpp  ContactSolver.cu  DrillingStrategy.cpp  EnergyMonitor.cpp  FEMSolver.cu  GCodeInterpreter.cpp  GeometricAnalyzer.cpp  GeometryLoader.cpp  HDF5Exporter.cpp  ImplicitFEMSolver.cu  MachiningStrategyFactory.cpp  MillingStrategy.cpp  MultiGPUManager.cu  OptimizationManager.cpp  ReamingStrategy.cpp  ResidualStressAnalyzer.cpp  RotationalFEA.cpp  SPHSolver.cu  SPHWorkpieceModel.cpp  SimulationEngine.cpp  StdoutIPCExporter.cpp  SurfaceReconstructor.cpp  SurfaceRoughnessPredictor.cpp  ThreadingStrategy.cpp  ToolCoatingModel.cu  ToolGenerator.cpp  TurningStrategy.cpp  VTKExporter.cpp  main.cpp  navier_stokes.cpp  particle_system.cpp  physics_models.cpp  simulation.cpp
